# Fiducial-Marker

./: README.md
AprilTag(video)/: CMakeLists.txt  main.cpp  myAprilTag.h
AprilTag(video)/apriltag/: apriltag.c  apriltag_pose.h  apriltag_quad_thresh.c
AprilTag_location/: main.cpp
AprilTag_location/apriltag/: apriltag.h  apriltag_pose.c
AprilTag_location/data/MI8/: calibresult.txt
ArUcoMarker(video)/: CMakeLists.txt  main.cpp
ArUcoMarker_location/: CMakeLists.txt  main.cpp  myfunction.h
ChromaTag(video)/: CMakeLists.txt  main.cpp  myChromaTag.h
ChromaTag(video)/Configs/: chromatags_config.yml
ChromaTag(video)/Detector/: JMD_ChromaTag_Detect.cpp
ChromaTag(video)/Utilities/Common/: CMakeLists.txt
ChromaTag_location/: CMakeLists.txt  main.cpp  myChromaTag.h  myfunction.h
ChromaTag_location/Detector/: CMakeLists.txt  JMD_ChromaTag.cpp  JMD_ChromaTag_Detect.cpp
ChromaTag_location/Utilities/: CMakeLists.txt
ChromaTag_location/Utilities/LCM_Types/: CMakeLists.txt
ChromaTag_location/Utilities/Math/: CMakeLists.txt
ChromaTag_location/Utilities/Vision/: CMakeLists.txt
ChromaTag_location/data/M210/: calibresult.txt
ChromaTag_location/data/MI8/: calibresult.txt
